gnome-terminal (3.20.2-1ubuntu7) UNRELEASED; urgency=medium

  * Update 01_onlyshowin.patch to show in unity7 but not unity8
    (See bug 1680111)

 -- Jeremy Bicha <jbicha@ubuntu.com>  Wed, 05 Apr 2017 09:21:41 -0400

gnome-terminal (3.20.2-1ubuntu6) zesty; urgency=medium

  * Merge change from Debian's 3.22.1-2:
   - Disable prefs migration from GConf to GSettings. This was already
     available for the migration from wheezy to jessie and we don't want to
     pull in the deprecated gconf library in stretch.

 -- Jeremy Bicha <jbicha@ubuntu.com>  Wed, 01 Mar 2017 11:53:01 -0500

gnome-terminal (3.20.2-1ubuntu5) yakkety; urgency=medium

  * debian/control.in:
    - Recommend default-dbus-session-bus | dbus-session-bus instead of
      dbus-x11 (Closes: #835889)

 -- Jeremy Bicha <jbicha@ubuntu.com>  Thu, 29 Sep 2016 22:30:25 -0400

gnome-terminal (3.20.2-1ubuntu4) yakkety; urgency=medium

  * Add git_allow-inspector-without-debug.patch:
    - Add Inspector item to Help menu if GTK's enable-inspector-keybinding
      gsettings is true instead of requiring gnome-terminal to be recompiled
      with --enable-debug. The usual Ctrl+Shift+I or Ctrl+Shift+D keyboard
      shortcuts are not enabled so that they are available for command-line
      apps. Backported from 3.22.
  * debian/rules:
    - Don't build with --enable-debug

 -- Jeremy Bicha <jbicha@ubuntu.com>  Tue, 27 Sep 2016 20:10:52 -0400

gnome-terminal (3.20.2-1ubuntu3) yakkety; urgency=medium

  * debian/patches/60_add_lp_handler.patch: Update - move the regex to the
    right struct so that it's actually used.

 -- Iain Lane <iain@orangesquash.org.uk>  Mon, 22 Aug 2016 12:33:35 +0100

gnome-terminal (3.20.2-1ubuntu2) yakkety; urgency=medium

  * debian/patches/0001-Restore-transparency.patch: Don't crash if the alpha
    has a weird value. (LP: #1611358)

 -- Iain Lane <iain.lane@canonical.com>  Tue, 09 Aug 2016 13:49:00 +0100

gnome-terminal (3.20.2-1ubuntu1) yakkety; urgency=medium

  [ Tim Lunn ]